# cpp-numerical-system

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: main.yml
automation/: demo.bat  setup_windows.bat
demo/: main.cpp
numerical-system/: BinaryArithmetic.cpp  BinaryArithmetic.h  FactorialArithmetic.cpp  FactorialArithmetic.h  Internal.h
unittests/: unittests.cpp
